fix(ui): check box, fix check-box tick to fit and correctly align in its container box

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -272,7 +272,6 @@
 //checkpoints
 .primary-checkpoint {
   background-color: $shadow-grey;
-  border-radius: 4px;
   display: inline-block;
   height: 25px;
   margin-top: 15px;
